can't fix padding

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@ Log In
 <table align="center" cellpadding="25" class="loginborder" bgcolor="#f1c40f">
 <tr>
   <td><label style="display:block" for="username"><p>Username:</p></label></td>
-  <td><input type="text" name="username" placeholder="Username"/></td>
+  <td><input type="text" name="username" placeholder="Username" class="padded"/></td>
 </tr>
 <tr>
    <td><label style="display:block" for="password"><p>Password:</p></label></td>
