--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@ Sign Up
     <td><input type="password" name="password" placeholder="Password"/></td>
   </tr>
   <tr>
-    <td><label style="display:block" for+"password"><p>Repeat Password:</p></label></td>
+    <td><label style="display:block" for="password"><p>Repeat Password:</p></label></td>
     <td><input type="password" name="check" placeholder="Repeat Password"/></td>
   </tr>
 </table>
