--- a/templates/login.html
+++ b/templates/login.html
@@ -21,11 +21,11 @@ Log In
 <form method="POST">
 <table align="center" cellpadding="25" class="loginborder" bgcolor="#f1c40f">
 <tr>
-  <td><label style="display:block" for="username"><p>Username:</p></label></td>
+  <td><label style="display:block" for="username"><b>Username:</b></label></td>
   <td><input type="text" name="username" placeholder="Username" class="padded"/></td>
 </tr>
 <tr>
-   <td><label style="display:block" for="password"><p>Password:</p></label></td>
+   <td><label style="display:block" for="password"><b>Password:</b></label></td>
    <td><input type="password" name="password" placeholder="Password"/></td>
 </tr>
 </table>
