--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,10 +8,17 @@ Sign Up
 
 {% block contents %}
 
-<h1>Sign up here</h1>
+<div class="header"></div>
+<div class="headtext">
+  <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
+  <h1 class="headtext">Sign up here</h1>
+  <a href="/logout" class="btn" style="float: right"> Logout </a>
+</div>
+
+<br><br><br><br><br><br>
 
 <form method="POST">
-<<<<<<< HEAD
+  <!--
 <table align="center" cellpadding="25" class="loginborder" bgcolor="#f1c40f">
   <tr>
     <td><label style="display:block" for="username"><p>Username:</p></label></td>
@@ -26,13 +33,35 @@ Sign Up
     <td><input type="password" name="check" placeholder="Repeat Password"/></td>
   </tr>
 </table>
-<br><br>
-=======
-  Username: <input type="text" name="user" placeholder="Username">
+<br><br> -->
+
+  <table align="center" cellpadding="25" class="loginborder" bgcolor="f1c40f">
+    <tr>
+      <td>
+	<b>Username:</b>
+      </td>
+      <td>
+	<input type="text" name="user" placeholder="Username">
+      </td>
+    </tr>
+    <tr>
+      <td>
+	<b>Password:</b>
+      </td>
+      <td>
+	<input type="password" name="pass" placeholder="Password">
+      </td>
+    </tr>
+    <tr>
+      <td>
+	<b>Repeat Password:</b>
+      </td>
+      <td>
+	<input type="password" name="check" placeholder="Repeat Password">      
+      </td>
+    </tr>
+  </table>
   <br><br>
-  Password: <input type="password" name="pass" placeholder="Password">
-  <br><br>
->>>>>>> 2e8f1052634faa7464dcd46919f65a8f3731281f
   <input type="submit" name="submit" value="Submit" class="btn">
   <input type="submit" name="submit" value="Cancel" class="btn">
 </form>
