--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,7 +41,7 @@ Sign Up
 	<b>Username:</b>
       </td>
       <td>
-	<input type="text" name="user" placeholder="Username">
+	<input type="text" name="user" placeholder="Username" style="height: 25px; font-size: 12pt;">
       </td>
     </tr>
     <tr>
@@ -49,7 +49,7 @@ Sign Up
 	<b>Password:</b>
       </td>
       <td>
-	<input type="password" name="pass" placeholder="Password">
+	<input type="password" name="pass" placeholder="Password" style="height: 25px; font-size: 12pt;">
       </td>
     </tr>
     <tr>
@@ -57,7 +57,7 @@ Sign Up
 	<b>Repeat Password:</b>
       </td>
       <td>
-	<input type="password" name="check" placeholder="Repeat Password">      
+	<input type="password" name="check" placeholder="Repeat Password" style="height: 25px; font-size: 12pt;">      
       </td>
     </tr>
   </table>
