to make textbooks larger

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,12 +21,12 @@ Log In
 <form method="POST">
 <table align="center" cellpadding="25" class="loginborder" bgcolor="#f1c40f">
 <tr>
-  <td><label style="display:block" for="username"><b>Username:</b></label></td>
-  <td><input type="text" name="username" placeholder="Username" class="padded"/></td>
+  <td><b>Username:</b></td>
+  <td><input type="text" name="username" placeholder="Username" style="height: 25px; font-size: 12pt;"/></td>
 </tr>
 <tr>
-   <td><label style="display:block" for="password"><b>Password:</b></label></td>
-   <td><input type="password" name="password" placeholder="Password"/></td>
+   <td><b>Password:</b></td>
+   <td><input type="password" name="password" placeholder="Password" style="height: 25px; font-size: 12pt;"/></td>
 </tr>
 </table>
 <br>
