--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -25,7 +25,7 @@ Create a New Post
 
 <form method="POST">
   <h3>Title (maximum 256 characters)</h3> 
-  <textarea type="text" name="title" placeholder="Title" class="title"></textarea>
+  <textarea type="text" name="title" placeholder="Title" class="titleinput"></textarea>
   <br><br><br>
   <h3>Body (maximum 256 characters)</h3>
   <textarea type="text" name="body" maxlength="256" placeholder="Enter text here..."></textarea>
