--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
 </head>
 <body {% if index %}class="index"{% endif %}>
     <div id="container">
-        {% block contents %}{% endblock %}
+      {% block contents %}{% endblock %}
+      <img src="../static/mascot.gif" class="footer">
     </div>
 </body>
 </html>
