--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
 <body {% if index %}class="index"{% endif %}>
     <div id="container">
       {% block contents %}{% endblock %}
-      <img src="../static/mascot.gif" class="footer">
+      <div>
+	<img src="../static/mascot.gif" class="footer">
+      </div>
     </div>
 </body>
 </html>
