can't see mascot until login

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
     <div id="container">
       {% block contents %}{% endblock %}
       <div>
+	{% if session["logged"]>0 %}
 	<img src="../static/mascot.gif" class="footer">
+	{% endif %}
       </div>
     </div>
 </body>
