--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -7,6 +7,9 @@
     <br><br><br><br>
     <h3>{{uname}}</h3>
     <h3>Your Posts</h3>
+    {% for post in yourposts %}
+      <a href="{{ url_for('story', storyid=post[0]) }}">{{ post[1] }}</a><br><br>
+    {% endfor %}
   </div>
   
   <div class="header"></div>
