--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,18 +9,7 @@ Create a New Post
 {% block contents %}
 
 <div class="container">
-  <div class="sidebar">
-    <br><br><br><br>
-    <h3>{{ uname  }}</h3>
-    <h3>Your Posts</h3>
-  </div>
 
-  <div class="header"></div>
-  <div class="headtext">
-    <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
-    <h1 class="headtext"> Create a new post </h1>
-    <a href="/logout" class="btn" style="float: right"> Logout </a>
-  </div>
 <div class="main">
 
 <form method="POST">
@@ -43,3 +32,5 @@ Create a New Post
 </div>
 
 {% endblock %}
+
+{% block heading %}Create a New Post{% endblock %}
