--- a/templates/story.html
+++ b/templates/story.html
@@ -5,18 +5,7 @@
 {% block contents %}
 
 <div class="container">
-  <div class="sidebar">
-    <br><br><br><br>
-    <h3>{{uname}}</h3>
-    <h3>Your Posts</h3>
-  </div>
-  
-  <div class="header"></div>
-  <div class="headtext">
-    <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
-    <h1 class="headtext">{{ title }}</h1>
-   <a href="/logout" class="btn" style="float: right"> Logout </a>
-  </div>
+
   
   
   <div class="main">
@@ -50,3 +39,5 @@
 </div>
 
 {% endblock %}
+
+{% block heading %}{{ title }}{% endblock %}
