--- a/templates/story.html
+++ b/templates/story.html
@@ -14,21 +14,21 @@
   <div class="header"></div>
   <div class="headtext">
     <img id="logo" class="smalllogo" src="{{ url_for('static', filename='ebook_circle.png') }}" alt="storyboredlogo" height="50">
-    <h1 class="headtext">{{ title }}</h1>
+    <h1 class="headtext">POSTS</h1>
    <a href="/logout" class="btn" style="float: right"> Logout </a>
   </div>
   
   
   <div class="main">
-    <h3>By {{author}}</h3>
     </div>
-    
+
     <div class="story">
       <code>
 	<font size="5">
 	{% if storyid == None %}
 	  {% for post in posts %}
 	  {{ post[2]|idtoname }}: <a href="{{ url_for('story', storyid=post[0]) }}">{{ post[1] }}</a>
+	  <br>
 	  <br>
 	  {% endfor %}
 	{% else %}
