--- a/templates/story.html
+++ b/templates/story.html
@@ -32,7 +32,10 @@
 	  <br>
 	  {% endfor %}
 	{% else %}
-	  {{ content }}
+  	<!-- SHOULDN'T BE USING FIXED SIZES BUT I DON'T KNOW WHAT ELSE TO DO ON SUCH SHORT NOTICE. ACK!-->
+	  {% for line in content %}
+	    <p style="text-align:left;padding-left:900px;"><span style="opacity:0.7;">{{ line [1] }} |</span> {{ line[0] }}</p>
+	  {% endfor %}
 	{% endif %}
 	</font>
       </code>
