And here's to account for merge. Didn't realize there was a change there.

--- a/templates/story.html
+++ b/templates/story.html
@@ -34,7 +34,7 @@
 	{% else %}
   	<!-- SHOULDN'T BE USING FIXED SIZES BUT I DON'T KNOW WHAT ELSE TO DO ON SUCH SHORT NOTICE. ACK!-->
 	  {% for line in content %}
-	    <p style="text-align:left;padding-left:900px;"><span style="opacity:0.7;">{{ line [1] }} |</span> {{ line[0] }}</p>
+	    <p style="text-align:left;"><span style="opacity:0.7;">{{ line [1] }} |</span> {{ line[0] }}</p>
 	  {% endfor %}
 	{% endif %}
 	</font>
